--- a/neo-6m_gps/Firmware.X/nbproject/Makefile-genesis.properties
+++ b/neo-6m_gps/Firmware.X/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Tue May 15 02:04:36 GMT-03:00 2018
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.45\\bin
-configurations-xml=6a01da58d53a38d4c9405979f8a0d7cd
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=c8c2915d32f5d7e4be49831bc9827ab0
+#Thu Jun 21 13:32:13 BRT 2018
+default.languagetoolchain.dir=/opt/microchip/xc8/v1.45/bin
+configurations-xml=8722d9198f11141a6cd49165c9da2f9a
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=5d30ff5128b14865c8a3796a8f0bb8a0
 default.languagetoolchain.version=1.45
-host.platform=windows
+host.platform=linux
 conf.ids=default
-default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=77bc274daef1c9f921a0d1f4a82b91db
+default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=1ecde863556371fa9144cadd16f678d4
