--- a/Magnetometro HMC5883L/magnetometro.X/nbproject/Makefile-genesis.properties
+++ b/Magnetometro HMC5883L/magnetometro.X/nbproject/Makefile-genesis.properties
@@ -1,7 +1,7 @@
 #
-#Sun Jun 24 13:59:04 BRT 2018
+#Sun Jun 24 21:27:24 KST 2018
 default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.45\\bin
-configurations-xml=fddbf2cea4c05965a63848a971934b23
+configurations-xml=4d25d930d489c08f72701107d1aa10ea
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=c8c2915d32f5d7e4be49831bc9827ab0
 default.languagetoolchain.version=1.45
 host.platform=windows
